--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </a>
                 <nav class="navegacion">
                     <a href="#">Inicio</a>
-                    <a href="#">Nosotros</a>
-                    <a href="#">Servicios</a>
-                    <a href="#">Contacto</a>
+                    <a href="#nosotros">Nosotros</a>
+                    <a href="#servicios">Servicios</a>
+                    <a href="#contacto">Contacto</a>
                 </nav>
             </div>
             <div id="slogan">
@@ -31,7 +31,7 @@
             </div>
         </div>
     </header>
-        <section class="contenedor espacio">
+        <section class="contenedor espacio" id="nosotros">
             <h2 class="fw400 centrar-texto">¿Por qué elegirnos?</h2>
             <div class="elegirnos">
                 <div class="razones">
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <main class="contenedor espacio">
+        <main class="contenedor espacio" id="servicios">
             <h2 class="fw400 centrar-texto">Nuestros Servicios</h2>
             <div class="oferta">
                 <div class="servicio">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </main>
-        <section class="imagen-contacto">
+        <section class="imagen-contacto" id="contacto">
             <div class="contenedor contenido-contacto">
                 <h2>Nuestros números</h2>
                 <i class="fas fa-users"></i>
