enlaces menú footer y redes sociales

--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
     <div class="contenedor menu-footer">
         <nav>
         <a href="#">Inicio</a>
-        <a href="#">Nosotros</a>
-        <a href="#">Servicios</a>
-        <a href="#">Contacto</a>
+        <a href="#nosotros">Nosotros</a>
+        <a href="#servicios">Servicios</a>
+        <a href="#contacto">Contacto</a>
         </nav>
     </div>
         <div class="contenedor redes"> 
             <nav>
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-pinterest"></i></a>
+                <a href="https://www.facebook.com/mrfixmexico/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com/MrFixMexico" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.instagram.com/mrfixmexico/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.pinterest.com.mx/repmdepc/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
              </nav>
         </div> 
 </footer>
